2021-02-02  Karl Berry  <karl@freefriends.org>

	* capcrossref.pl (crossref_create_landing_page): format tweaks.

2021-01-25  Karl Berry  <karl@freefriends.org>

	* capcrossref.pl (crossref_create_landing_page): tub info in header.

2021-01-23  Karl Berry  <karl@freefriends.org>

	* tb18capsule.txt: Knuth and Mike Black authors of subparts
	(from Yajie).
	* tb109capsule.txt,
	* tb92capsule.txt: %add|Software \& Tools for tuneup.

2021-01-20  Karl Berry  <karl@freefriends.org>

	* capcrossref.pl (crossref_write_files): call doi_of_capsule.
	(crossref_create_landing_page): add prev/next doi links.
	(item_link): new fn to make those links.
	(doi_of_capsule): new fn to construct doi.
	* cr-landing-bbl-abs: call ltx2unitxt with --html --entities.
	(update_landing_bbl): <ol class="negskip"> for references. Ugly.
	
	* Makefile (crw): new target to make doi urls local, for testing.

2021-01-13  Karl Berry  <karl@freefriends.org>

	* cr-do-issue: new script to handle the overall crossref process
	for both issue.xml and landing pages.
	* Makefile (crossref_iss): separate from testiss and lastiss.
	(cr_*): rename working directories to crossref/dirN.DESC.
	(crl, cro): new convenience targets for running cr-do-issue.
	Remove previous drafts of crossref processing.
	* capcrossref.pl (crossref_create_landing_page): wording.
	* cr-copy-bbl-abs: handle abstracts, better reporting.
	* cr-landing-bbl-abs: better reporting.
	(update_landing_abs): new fn, handle abstracts via ltx2unitxt.
	(system_mv): new fn to run mv.

2021-01-02  Karl Berry  <karl@freefriends.org>

	* Makefile (cr_temp, cr_process): change names to dir1.auto
	and dir2.process, to hopefully clarify use and ordering.
	* capcrossref.pl (crossref_write_files): use $::OPT{crossref},
	not hardwiring crossref/rpi.

2021-01-01  Karl Berry  <karl@freefriends.org>

	Insert bibliographies into landing pages.
	* Makefile (crbat): new target for testing landing page updates.
	(cr1): further steps toward whole process.